[ci skip] Updates

--- a/classes/expnodecomponent.html
+++ b/classes/expnodecomponent.html
@@ -128,7 +128,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L44">lib/component.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L44">lib/component.ts:44</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -184,7 +184,7 @@
 					<div class="tsd-signature tsd-kind-icon">callbacks<span class="tsd-signature-symbol">:</span> <a href="../interfaces/nodecallbacks.html" class="tsd-signature-type">NodeCallbacks</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L39">lib/component.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L39">lib/component.ts:39</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -199,7 +199,7 @@
 					<div class="tsd-signature tsd-kind-icon">container<wbr>El<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Element</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L29">lib/component.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L29">lib/component.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -214,7 +214,7 @@
 					<div class="tsd-signature tsd-kind-icon">node<span class="tsd-signature-symbol">:</span> <a href="../interfaces/node.html" class="tsd-signature-type">Node</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L34">lib/component.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L34">lib/component.ts:34</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -229,7 +229,7 @@
 					<div class="tsd-signature tsd-kind-icon">types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ReadonlyArray</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/nodetype.html" class="tsd-signature-type">NodeType</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L44">lib/component.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L44">lib/component.ts:44</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L120">lib/component.ts:120</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L134">lib/component.ts:134</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -282,7 +282,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L224">lib/component.ts:224</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L235">lib/component.ts:235</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -313,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L199">lib/component.ts:199</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L210">lib/component.ts:210</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -344,7 +344,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L159">lib/component.ts:159</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L168">lib/component.ts:168</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -375,7 +375,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L250">lib/component.ts:250</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L277">lib/component.ts:277</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -406,7 +406,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L70">lib/component.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L70">lib/component.ts:70</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -428,7 +428,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L137">lib/component.ts:137</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L151">lib/component.ts:151</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -459,7 +459,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/component.ts#L17">lib/component.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/component.ts#L17">lib/component.ts:17</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -602,6 +602,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -650,7 +651,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
