--- a/classes/expnode.html
+++ b/classes/expnode.html
@@ -122,7 +122,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/lib.ts#L28">lib/lib.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/lib.ts#L28">lib/lib.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -154,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">options<span class="tsd-signature-symbol">:</span> <a href="../interfaces/options.html" class="tsd-signature-type">Options</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/lib.ts#L28">lib/lib.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/lib.ts#L28">lib/lib.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -176,7 +176,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/lib.ts#L44">lib/lib.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/lib.ts#L44">lib/lib.ts:44</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -199,7 +199,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/lib.ts#L64">lib/lib.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/lib.ts#L64">lib/lib.ts:64</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -230,7 +230,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/lib.ts#L21">lib/lib.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/lib.ts#L21">lib/lib.ts:21</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -332,6 +332,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -380,7 +381,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
