--- a/interfaces/options.html
+++ b/interfaces/options.html
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">callbacks<span class="tsd-signature-symbol">:</span> <a href="nodecallbacks.html" class="tsd-signature-type">NodeCallbacks</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/models.ts#L42">lib/models.ts:42</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/models.ts#L42">lib/models.ts:42</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">container<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/models.ts#L37">lib/models.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/models.ts#L37">lib/models.ts:37</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -135,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">nodes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ReadonlyArray</span><span class="tsd-signature-symbol">&lt;</span><a href="node.html" class="tsd-signature-type">Node</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/models.ts#L52">lib/models.ts:52</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/models.ts#L52">lib/models.ts:52</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -150,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ReadonlyArray</span><span class="tsd-signature-symbol">&lt;</span><a href="nodetype.html" class="tsd-signature-type">NodeType</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/2f155fc/src/lib/models.ts#L47">lib/models.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/mkolodiy/expandable-node/blob/c4ec1bf/src/lib/models.ts#L47">lib/models.ts:47</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -236,6 +236,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -284,7 +285,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
