[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 ExpNode.create(options);</code></pre>
 				<p>Using the configuration above you will get the following output:</p>
 				<p align="center">
-					<img src="docs/basic-configuration.PNG" alt="Basic configuration" />
+					<img src="https://raw.githubusercontent.com/mkolodiy/expandable-node/master/docs/basic-configuration.PNG" alt="Basic configuration" />
 				</p>
 				<a href="#full-configuration" id="full-configuration" style="color: inherit; text-decoration: none;">
 					<h2>Full configuration</h2>
